<resources>
    <string name="app_name">NoteDroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_lbl_title">Title:</string>
    <string name="txt_lbl_note">Note:</string>
    <string name="txt_btn_save">save</string>
    <string name="txt_lbl_create">Created on:</string>
    <string name="txt_lbl_changed">Changed on:</string>
    <string name="text_mi_delete">Delete</string>
    <string name="txt_list_preference">Order notes by</string>
    <string name="txt_mi_settings">Settings</string>
</resources>
